# push-chain-interop-contracts

./: .gitmodules  README.md
contracts/evm-gateway/: .env.example  .env.sample  README.md  foundry.toml
contracts/evm-gateway/lib/: openzeppelin-foundry-upgrades
contracts/evm-gateway/script/: 1_DeployGatewayWithProxy.sol  2_DeployGatewayImpl.sol  3_UpgradeGatewayNewImpl.sol  DeployGatewayToSepolia.s.sol
contracts/evm-gateway/src/: UniversalGateway.sol  UniversalGatewayV0.sol  UniversalGatewayV1.sol
contracts/evm-gateway/src/interfaces/: IAMMInterface.sol  IUniversalGateway.sol  IWETH.sol
contracts/evm-gateway/src/libraries/: Errors.sol  TWAPOracle.sol  Types.sol
contracts/evm-gateway/test/: BaseTest.t.sol  TWAPOracle.t.sol  UniversalGateway.t.sol  UniversalGatewayV1.t.sol
contracts/evm-gateway/test/gateway/: 1_GatewayAdminSetters.t.sol  2_GatewayDepositNative.t.sol  3_GatewayDepositNonNative.t.sol
contracts/evm-gateway/test/mocks/: MockAggregatorV3.sol  MockERC20.sol  MockWETH.sol  (+1 more)
contracts/svm-gateway/: .gitignore  Anchor.toml  Cargo.toml  README.md  TECHNICAL_ARCHITECTURE.md  convert.mjs  deploy.sh  package.json
contracts/svm-gateway/app/: fetchPrice.ts  gateway-test.ts  manual.ts  withdrawal-test.ts
contracts/svm-gateway/programs/pushsolanagateway/: Cargo.toml
contracts/svm-gateway/programs/pushsolanagateway/src/: errors.rs  lib.rs  state.rs  utils.rs
contracts/svm-gateway/programs/pushsolanagateway/src/instructions/: admin.rs  deposit.rs  initialize.rs  legacy.rs  mod.rs  tss.rs  withdraw.rs
contracts/svm-gateway/tests/: pushsolanalocker.ts
(+3 files in other folders)
